--- a/css/main.css
+++ b/css/main.css
@@ -8,10 +8,11 @@ ul {
     display: inline-block; }
 
 header .container-fluid {
-  border-bottom: 1px solid red; }
+  border-bottom: 1px solid #A3A3A3; }
 
 header nav ul li a {
   font-size: 16px;
+  font-family: 'Roboto', sans-serif;
   line-height: 26px;
   font-weight: normal;
   color: black; }
@@ -50,8 +51,8 @@ img {
     font-size: 16px;
     line-height: 26px;
     font-weight: normal;
-    color: black;
-    border: 1px solid red;
+    color: #000;
+    border: 1px solid #A3A3A3;
     outline: 10px solid #fff; }
     .tile h3 span {
       font-size: 18px;
@@ -101,7 +102,7 @@ img {
     font-size: 18px;
     line-height: 28px;
     font-weight: bold;
-    color: red; }
+    color: #000; }
   .product__text p {
     font-size: 16px;
     line-height: 26px;
@@ -112,14 +113,15 @@ img {
       color: grey; }
 
 footer .container-fluid {
-  border-top: 1px solid red;
-  border-bottom: 1px solid red; }
+  border-top: 1px solid #A3A3A3;
+  border-bottom: 1px solid #A3A3A3; }
 
 footer nav ul li a {
-  font-size: 16px;
+  font-size: 14px;
   line-height: 26px;
+  font-family: 'Lora', serif;
   font-weight: normal;
-  color: black; }
+  color: #A3A3A3; }
   footer nav ul li a:hover {
     color: red; }
 
@@ -127,8 +129,23 @@ footer .icon {
   display: block;
   width: 40px;
   height: 40px;
+  border: 1px solid;
   border-radius: 20px;
-  background-color: pink; }
+  border-color: #A3A3A3;
+  color: #9AB4B3;
+  background-color: #fff; }
   footer .icon i {
     font-size: 14px;
     line-height: 40px; }
+
+footer p {
+  font-size: 14px;
+  font-family: 'Lora', serif;
+  font-weight: 400;
+  font-style: italic;
+  color: #000; }
+  footer p span {
+    color: #BEBEBE;
+    font-family: 'Roboto', sans-serif;
+    font-size: 14px;
+    font-weight: normal; }
