--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,4 +1,7 @@
-
+$tower-gray:#9AB4B3;
+$regent-blue: #A7C5E3;
+$silver-chalice: #A3A3A3;
+$silver: #BEBEBE;
 
 
 ul {
@@ -15,7 +18,7 @@ ul {
 
 header {
     .container-fluid {
-        border-bottom: 1px solid red;
+        border-bottom: 1px solid $silver-chalice;
     }
 
     nav {
@@ -25,9 +28,11 @@ header {
                
                 a {
                     font-size: 16px;
+                    font-family: 'Roboto', sans-serif;
                     line-height: 26px;
                     font-weight: normal;
                     color: black;
+                    
 
                     &:hover {
                         color: red;
@@ -78,9 +83,9 @@ img {
         font-size: 16px;
         line-height: 26px;
         font-weight: normal;
-        color: black;
+        color: #000;
 
-        border:1px solid red ;
+        border: 1px solid $silver-chalice ;
         outline: 10px solid #fff;
 
         span {
@@ -150,7 +155,7 @@ img {
             font-size: 18px;
             line-height: 28px;
             font-weight: bold;
-            color: red;
+            color: #000;
         }
         p {
             font-size: 16px;
@@ -168,8 +173,8 @@ img {
 
 footer {
     .container-fluid {
-        border-top: 1px solid red;
-        border-bottom: 1px solid red;
+        border-top: 1px solid $silver-chalice;
+        border-bottom: 1px solid $silver-chalice;
     }
     nav {
         ul {
@@ -177,10 +182,11 @@ footer {
             li {
             
                 a {
-                    font-size: 16px;
+                    font-size: 14px;
                     line-height: 26px;
+                    font-family: 'Lora', serif;
                     font-weight: normal;
-                    color: black;
+                    color: $silver-chalice;
 
                     &:hover {
                         color: red;
@@ -194,11 +200,28 @@ footer {
         display: block;
         width: 40px;
         height: 40px;
+        border: 1px solid;
         border-radius: 20px;
-        background-color: pink;
+        border-color: $silver-chalice;
+        color: $tower-gray;
+        background-color: #fff;
         i {
             font-size: 14px;
             line-height: 40px;
+        }
+    }
+    p {
+        font-size: 14px;
+        font-family: 'Lora', serif;
+        font-weight: 400;
+        font-style: italic;
+        color: #000;
+
+        span {
+            color: $silver;
+            font-family: 'Roboto', sans-serif;
+            font-size: 14px;
+            font-weight: normal;
         }
     }
 }
